src/objects/c2g__codaTableProperty__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce Print Formatter.</description>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GroupBySpecif__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GroupBySpecif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__GroupBy__c</fullName>
        <label>GroupBy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NumberOfRows__c</fullName>
        <label>NumberOfRows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Qualifier__c</fullName>
        <label>Qualifier</label>
        <picklist>
            <picklistValues>
                <fullName>com_printformat_subsection_none</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_subsection_always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_subsection_if_present</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__SubSectionSpecif__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SubSectionSpecif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SubSection__c</fullName>
        <label>SubSection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Table Property</label>
    <nameField>
        <label>Table Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Table Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>